CAMEL-15628: Fixed ArrayIndexOutOfBoundsException for concurrent / high throughtput routing with message history enabled.